--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <title>Weather Website</title>
   </head>
   <body>
+<p>hello</p>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
